# aaa

./: .env.example  .gitignore  README.md  pyproject.toml
.github/: copilot-instructions.md
.github/agents/: dashboard-builder.agent.md  dashboard-engineer.agent.md  data-profiler.agent.md  document-intake.agent.md  memo-writer.agent.md  orchestrator.agent.md  reviewer.agent.md  snowflake-engineer.agent.md  snowflake-loader.agent.md  tool-builder.agent.md  validation-reviewer.agent.md  valuation-analyst.agent.md  wiki-curator.agent.md
.github/skills/assumption-review-example/: SKILL.md
.github/skills/dashboard-generation/: SKILL.md
.github/skills/document-conversion/: SKILL.md
.github/skills/feedback-learning/: SKILL.md
.github/skills/movement-memo/: SKILL.md
.github/skills/snowflake-load/: SKILL.md
docs/: actuarial-agent-pattern.html
examples/assumption_review/: README.md  assumption_note.md  prior_committee_summary.md
examples/valuation_movement/: README.md  valuation_bridge.csv  valuation_results.csv
mcp/: server.py
sql/: snowflake_bootstrap.sql
src/actuarial_copilot/: __init__.py  analysis.py  cli.py  config.py  conversion.py  filesystem.py  ingestion.py  load.py  mcp_server.py  memo.py  pipeline.py  snowflake.py  table_io.py  wiki.py
streamlit/: README.md  app.py  environment.yml
tests/: test_analysis.py  test_config.py  test_convert_profile.py  test_examples.py  test_ingestion.py  test_pipeline.py  test_snowflake_mcp_docs.py  test_wiki_feedback_scaffold.py
wiki/: index.md  log.md  purpose.md  schema.md
(+23 files in other folders)
