[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "actuarial-copilot-workbench"
version = "0.1.0"
description = "VS Code Copilot-operated valuation movement MVP for actuarial teams"
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "Actuarial AI MVP" }]
dependencies = []

[project.optional-dependencies]
dev = []
markitdown = ["markitdown[all]>=0.1.0", "openpyxl>=3.1.0"]
snowflake = ["snowflake-connector-python>=3.0.0"]
mcp = ["mcp>=1.0.0"]
streamlit = ["streamlit>=1.35.0", "snowflake-snowpark-python>=1.20.0"]

[project.scripts]
act = "actuarial_copilot.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

