[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "actuarial-agent-workbench"
version = "0.2.0"
description = "LLM-native actuarial agent workbench with MCP/Python capability tools"
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "Actuarial AI Workbench" }]
dependencies = []

[project.optional-dependencies]
dev = []
markitdown = ["markitdown[all]>=0.1.0", "openpyxl>=3.1.0"]
snowflake = ["snowflake-connector-python>=3.0.0"]
mcp = ["mcp>=1.0.0"]

[tool.setuptools.packages.find]
where = ["src"]

